# Enigma

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: dbmanager.cpp  dbmanager.h  encryption.cpp  encryption.h  totpgenerator.cpp  totpgenerator.h
src/models/: notemanager.cpp  notemanager.h  passwordmanager.cpp  passwordmanager.h  user.cpp  user.h
src/ui/: logindialog.cpp  logindialog.h  loginwidget.cpp  loginwidget.h  mainwindow.cpp  mainwindow.h  notepadwidget.cpp  notepadwidget.h  passwordgeneratorwidget.cpp  passwordgeneratorwidget.h  passwordmanagerwidget.cpp  passwordmanagerwidget.h
